Fixed overflow issue

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,8 @@
 footer{
-    position: absolute;
-    bottom: 1rem;
+    height: 100%;
+}
+
+footer > * {
+    width: 100%;
+    height: 100%;
 }
