--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,17 @@
 main.flex{
     display: flex;
-/*     flex-basis: 15rem; */
     flex-wrap: wrap;
-    flex-grow: 1;
-    flex-shrink: 1;
-    gap: 1rem;
+    gap: var(--gap-size);
+    
+    height: 100%;
 
-    width: 100%;
-    margin: 1rem;
-/*     padding: 1rem */
+    margin: var(--gap-size);
 }
 
 main.flex > div.flex-item {
-/*     min-width: 15rem; */
     flex-basis: 15rem;
     flex-grow: 1;
     flex-shrink: 1;
-/*     width: 100%; */
-    /* max-width: 25rem; */
-
-    /* margin: auto; */
-    /* padding: 1rem; */
-/*     flex-grow: 1; */
 
     padding: 0.5rem;
     margin: 0;
@@ -32,7 +22,6 @@ main.flex > div.flex-item {
 
 
 main.flex > div.favPages {
-/*     width: 80%; */
     flex-basis: 80%;
     background: red;
 }
